syntax = "proto2";

package acts.metrics.bounded;

option java_package = "com.android.acts.metrics.bounded";

message Metric {
  // required
  optional string test_class = 1;
  optional string test_method = 2;
  // required
  optional string metric = 3;
  // required
  optional double value = 4;
  optional DoubleValue lower_limit = 5;
  optional DoubleValue upper_limit = 6;
  optional string unit = 7;
}

// Wrapper needed to support proto3-like style nullable values.
message DoubleValue {
  optional double value = 1;
}
